# maelstrom

./: .gitignore  AUTHORS  Makefile.am  THANKS-SHOTGUN  azy.pc.in  configure.ac  email.pc.in  shotgun.pc.in
data/: Makefile.mk  shotgun.desktop  shotgun_gui.mk
debian/: changelog  control  libmaelstrom-dev.install  libmaelstrom.install  libmaelstrom.lintian-overrides
doc/: azy.dox.in
m4/: ax_prog_cc_for_build.m4
pkgbuild/: PKGBUILD  maelstrom-1.7.10-1-x86_64.pkg.tar.xz
rpm/: maelstrom.spec  maelstrom.spec.in
shotgun/: configure.ac
shotgun/src/lib/: shotgun_utils.c  xml.cpp
shotgun/src/modules/sawed-off/: e_mod_main.c
src/include/: Azy.h  Makefile.mk  azy_private.h
src/include/azy/: Azy.h  azy_private.h
src/include/email/: Email.h  email_private.h
src/include/extras/: match.h  memrchr.h
src/include/shotgun/: Shotgun.h  shotgun_private.h  shotgun_xml.h
src/lib/: Makefile.am  Makefile.mk  azy.mk  azy_client.c  azy_client_events.c  azy_content.c  azy_content_json.c  azy_content_xml.cpp  azy_events.c  azy_lib.c  azy_net.c  azy_net_cookie.c  azy_rss.c  azy_rss_item.c  azy_server.c  azy_server_events.c  azy_server_module.c  azy_utils.c  azy_value.c  email.mk  shotgun.mk
src/lib/azy/: azy_client.c  azy_client_events.c  azy_content.c  azy_content_json.c  azy_content_xml.cpp  azy_events.c  azy_lib.c  azy_net.c  azy_net_cookie.c  azy_rss.c  azy_rss_item.c  azy_server.c  azy_server_events.c  azy_server_module.c  azy_utils.c
src/lib/email/: auth.c  contact.c  email.c  email_utils.c  imap_funcs.c  imap_handlers.c  imap_login.c  message.c  message_part.c  pop_handlers.c  pop_list.c  pop_login.c  pop_retr.c  smtp_handlers.c  smtp_login.c
src/lib/extras/: Makefile.am  cJSON.c  memrchr.c  sha1wrap.c
src/lib/extras/strmatch/: Mac.c  Mshiftor.c  Mwm.c  Sbf.c  Sbm.c  Sbmh.c  Sbmhs.c  Sbom.c  Sbyh.c  Skmp.c  Skmpskip.c  Skr.c  Smp.c  Sprime.c  Sshiftand.c  Sshiftor.c  Sskip.c  Ssmith.c  automaton.h  dsor.c  lstrstr.c  reference  report.c  report.h  sse4_strstr.c  strstrsse.c  strstrsse.h  strstrsse42.c  strstrsse42a.c  util.h  varshift.h
src/lib/shotgun/: iq.c  login.c  messaging.c  presence.c  shotgun.c  shotgun_utils.c  xml.cpp
src/modules/: Makefile.mk
src/modules/sawed-off/: Makefile.mk  e_mod_config.c  e_mod_main.c  e_mod_main.h
src/tests/: Makefile.am  Makefile.mk  azy.mk  client.c  email.mk  stress_client.c  test.azy
src/tests/azy/: client.c  server.c  stress_client.c
src/tests/azy/http-simple/: Makefile.am  Makefile.mk  http-simple.c
src/tests/azy/identi.ca/: Makefile.mk  get.c  identi.ca.azy  identi_ca.c
src/tests/azy/rss/: Makefile.mk  rss.c
src/tests/azy/unit/: Makefile.mk  azy_content_deserialize_json.c  t002_json.azy  t002_json.c  t002_json.h
src/tests/email/: test_imap.c  test_pop3.c  test_smtp.c
src/tests/http-simple/: http-simple.c
src/tests/identi.ca/: get.c
src/tests/rss/: rss.c
src/tests/unit/: t001_content.c
